fixed createaguide title spacing

--- a/frontend/src/components/CreateAGuide/styles.css
+++ b/frontend/src/components/CreateAGuide/styles.css
@@ -28,7 +28,11 @@
   
 .navBar__top--title{
   position: relative;
-  left: -5%;
+
+}
+
+.empty__div {
+  width: 3em;
 
 }
 
